content appearing behind header on scroll. fixed top padding on main content

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -43,3 +43,7 @@ nav span {
   display: inline-block;
   padding: 20px 10px;
 }
+
+.main-content {
+  padding-top: 69px;
+}
